--- a/css/styles.css
+++ b/css/styles.css
@@ -328,7 +328,7 @@ main {
   color: var(--title-text);
 }
 
-.form-field {
+.modal .form-field {
   display: flex;
   flex-direction: column;
 
@@ -822,6 +822,67 @@ footer .item + .item {
 .join-thumb a:focus {
   background-color: var(--accent-color);
 }
+
+footer .form-field {
+  display: flex;
+  flex-direction: column;
+  margin-left: 93px;
+
+  min-width: 570px;
+}
+
+footer .label {
+  margin-bottom: 20px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.143;
+  text-transform: uppercase;
+  color: var(--white-text);
+}
+
+.sub-group {
+  display: flex;
+}
+
+.sub-input {
+  padding: 15px 16px;
+  margin-right: 12px;
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  width: 100%;
+
+  background-color: transparent;
+}
+
+.sub-button {
+  padding: 10px 28px 10px 29px;
+
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
+  border-radius: 4px;
+  color: var(--white-text);
+
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+
+  cursor: pointer;
+}
+
+.sub-icon {
+  fill: currentColor;
+  margin-left: 10px;
+}
+
+fill="var(--color1, #fff)"
 
 /* Portfolio Styles */
 
